@@ -17,6 +17,8 @@ version 2.10.2 (02/22/2012):
 	* Allow signing on with usernames containing periods and
 	  underscores. (#13500)
 	* Allow adding buddies containing periods and underscores. (#13500)
+	* Don't try to format ICQ usernames entered as email addresses.
+	  Gets rid of an "Unable to format username" error at login. (#13883)
 
 	MSN:
 	* Fix possible crashes caused by not validating incoming messages as
